# data-access-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  custom.conf  das_site.conf  docker-compose.yml  entry_point.py  entrypoint.sh  environment.yml  log_config.yaml  package-lock.json  pyproject.toml  run.py  startServer.sh  supervisord.conf  uwsgi.ini
.duckdb_temp/: duckdb_temp_storage_DEFAULT-0.tmp  duckdb_temp_storage_S32K-0.tmp  duckdb_temp_storage_S64K-0.tmp
.github/workflows/: build_deploy_edge.yml  ci.yml  docker-build-pr.yml  release.yml  semantic-release-ci.yml  test.yml  trigger_deploy.yml
data_access_service/: __init__.py  api.py  attempt.py  descriptor.py  entrypoint.py  error.py  restapi.py  run.py  server.py
data_access_service/batch/: batch_enums.py  batch_stats.py  co_indexing.py  global_variables.py  pmtiles_generator.py  subsetting.py  subsetting_helper.py
data_access_service/common/: config.yaml  constants.py  settings.py  utils.py
data_access_service/config/: config-dev.yaml  config-edge.yaml  config-prod.yaml  config-staging.yaml  config.py  config.yaml  env_type.py
data_access_service/core/: AWSClient.py  AWSHelper.py  api.py  constants.py  descriptor.py  duckdbclient.py  error.py  middleware.py  restapi.py  routes.py  scheduler.py  server.py  site_feature_service.py  size_estimation.py
data_access_service/exceptions/: dataset_not_found_error.py
data_access_service/models/: ExtendedFeatureCollection.py  bounding_box.py  data_file_factory.py  date_range.py  descriptor.py  duckdb_repository.py  duckdb_session.py  estimate_size_request.py  feature_collection.py  multi_polygon_helper.py  pmtiles_types.py  sites_types.py  subset_request.py  tiler_types.py  value_count.py
data_access_service/repositories/: duckdb_repository.py
data_access_service/schemas/: sites.py
data_access_service/scripts/: generatefile.sh  healthcheck.sh
data_access_service/sites/: geojson.py  site_feature_service.py  sites_repository.py
data_access_service/tasks/: attempt.py  attempt4.py  collect_data_files_from_shared_storage.py  csv_file_generation.py  data_collection.py  data_file_upload.py  email_generator.py  generate_csv_file.py  generate_dataset.py  subset_zarr.py  sync_aws_batch_configs.py  task.py  test_email_generator.py  test_generate_csv_file.py
data_access_service/tiler/: README.md
data_access_service/utils/: api_utils.py  common_utils.py  dataset_column_name_mapping_utils.py  dataset_key_name_mapping_utils.py  date_range.py  date_time_utils.py  dim_names_utils.py  duckdb_sql_utils.py  email_generator.py  file_backed_list.py  file_utils.py  geojson.py  geotiff_export.py  json_utils.py  memory_utils.py  multi_polygon_helper.py  pmtiles_utils.py  process_logger.py  routes_helper.py  sse_utils.py  sse_wrapper.py  stop_watch.py  subset_request_resolver.py  subset_zarr_helper.py  subsetting_resolver.py  system_utils.py
docs/: wave-buoy-s3-backup.md
request-collection/: wave_buoy-feature.http  wave_buoy-feature_collection.http
tests/: __init__.py  conftest.py  test_api.py  test_email_generator.py  test_generate_csv_file.py  test_server.py
tests/batch/: batch_test_consts.py  jobprocessor.py  subsetting_helper_test.py  test_batch_processing.py  test_subsetting.py  test_subsetting_helper.py
tests/canned/: catalog_uncached.json
tests/config/: config-test.yaml
tests/core/: test_api.py  test_api_estimate_size.py  test_api_with_s3.py  test_api_with_s3_big_zarr.py  test_aws_helper.py  test_config.py  test_get_repo.py  test_routes.py  test_routes_helper.py  test_site_feature_service.py  test_with_s3.py
tests/edge_cases/: test_column_name_mapping.py  test_key_mapping.py
tests/models/: test_duckdb_repository.py  test_duckdb_session.py  test_subset_request.py
tests/repositories/: conftest.py  test_duckdb_repository.py  (+1 more)
(+3297 files in other folders)
