[tool.poetry]
name = "data-access-service"
version = "0.0.18"
description = ""
authors = ["utas-raymondng <manfai.ng@utas.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
# Dependency from a GitHub repository, use tag = "v0.1.32" or branch = "xxx"
aodn_cloud_optimised = { git = "https://github.com/aodn/aodn_cloud_optimised.git", tag = "v0.1.53" }
black = "^24.8.0"
blosc = "^1.11.3"
boto3 = "^1.28.0"
cartopy = "^0.24.1"
cryptography = "<44.0.2"
dask = {extras = ["dataframe"], version = ">=2024.9.1"}
fastapi = "0.119.0"
fuzzywuzzy = "^0.18.0"
gsw = "^3.6.19"
gunicorn = "23.0.0"
gevent = "24.2.1"
geojson="3.2.0"
h5py = "3.11.0"
jsonify = "^0.5"
logging = "^0.4.9.6"
matplotlib = "3.10.0"
pandas = "^2.2.3"
pyarrow = "17.0.0"
python = "^3.10.14"
python-levenshtein = "^0.25.1"
psutil = "^7.0.0"
pre-commit = "^3.8.0"
python-dotenv = "1.0.1"
requests = "2.32.5"
seaborn = "^0.13.2"
uvicorn = "0.30.6"
watchdog = "^4.0.1"
xmltodict = "^0.13.0"
windrose = ">=1.9.2"
coverage = "^7.8.0"
anyio = "4.9.0"
duckdb = "^1.3.2"

[tool.poetry.group.test.dependencies]
pytest = "8.4.1"
pytest-mock = "*"
pytest-xdist = "^3.8.0"
pytest-asyncio = "1.2.0"
testcontainers = "4.8.0"

[tool.pytest.ini_options]
addopts = "-vv"
asyncio_debug = true
log_cli = true
log_cli_level = "DEBUG"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts] # this will be later useful if build the wheel file from any poetry-managed repositories, then install and run the application from the wheel file instead of GitHub's source code
data-access-service = "data_access_service.run:main"
